tests/samples/invalid/member_assignment_type_mismatch.pn
word64 Position
{
	x: i32,
	y: i32,
}

word128 Line
{
	from: Position,
	to: Position,
}

struct Foo
{
	head: &Line,
}

fn main() -> i32
{
	var from = Position { x: 10, y: 10 };
	var line = Line { from, to: Position { x: 10, y: 0 } };
	var foo = Foo { head: &line };
	line.to.y = 0u8;
	foo.head.to.y = true;
	foo.head = from;
	foo.head = &line;
	&foo.head = from;
	&foo.head = &from;
	var bar: &Foo = &foo;
	&bar = &from;
	return: 400
}
